# wgx

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
egui/: Cargo.toml
egui/examples/: main.rs
egui/examples/ui/: mod.rs
egui/src/: egui_ctx.rs  epaint_ctx.rs  lib.rs
examples/: arc.rs  arc_cp.rs  arc_in.rs  arc_vin.rs  bowl.rs  curve.rs  deer-o.rs  ellipse.rs  glyphs.rs  iced.rs  obj.rs  primitives.rs  sdf.rs  shade.rs  sphere.rs  sphere_compute_square.rs  sphere_frag_cp_square.rs  sphere_frag_square.rs  test_arc.rs  test_arc_cp.rs  test_arc_in.rs  test_arc_vin.rs  test_ellipse.rs  test_frag_shape.rs  test_glsl-to-spirv.rs  test_glyphs.rs  test_hash.rs  test_iced.rs  test_primitives.rs  test_projection.rs  test_texture_draw.rs  test_triangles.rs  test_wavy.rs  texture_draw.rs  triangles.rs  triangles_winit.rs  wavy.rs
examples/arc/: arc.rs  arc_cp.rs  arc_ellipse.rs  arc_in.rs  arc_vin.rs  main.rs
examples/arc/shaders/: arc.wgsl  arc_cp.wgsl  arc_in.wgsl  arc_vin.wgsl  ellipse.wgsl  ellipse_skew.wgsl  util.wgsl
examples/common/: profile.rs  timer.rs  world_view.rs
examples/common/shaders/: compute_sphere_square.wgsl  cp_height_map.wgsl  frag_3d_text_diff.wgsl  frag_compute_sphere_square.wgsl  frag_flat_text.wgsl  shader_3d_inst_text_diff.wgsl  shader_3d_text_diff.wgsl  shader_flat_proj_text.wgsl  shader_flat_text.wgsl  util.wgsl
examples/sdf/: main.rs
examples/sdf/shader_imports/: ray_march.wgsl  ray_marcher.wgsl  sdf.wgsl  sdf_uniform_const.wgsl  uniform_const.wgsl
examples/sdf/shader_programs/: balls.wgsl  opt.wgsl
examples/shader-program/: main.rs
examples/shader-program/imports/: ray_marcher.wgsl  sdf.wgsl  uniform_const.wgsl  vertex_flat.wgsl
examples/shader-program/programs/: balls.wgsl  opt.wgsl  stars.wgsl  wavy.wgsl
examples/shaders/: arc.wgsl  arc_cp.wgsl  arc_in.wgsl  arc_vin.wgsl  default_flat_text.wgsl  default_v3d_text_diff.wgsl  ellipse.wgsl  ellipse_skew.wgsl  flat_proj_text.wgsl  flat_text.wgsl  flat_texture.wgsl  projection_texture.wgsl  sdf-balls.wgsl  sdf-opt.wgsl  standard_instance_texture.wgsl  standard_texture.wgsl  util.wgsl  v3d_inst_text_diff.wgsl  v3d_text_diff.wgsl  wavy.wgsl
examples/text-input/: main.rs  text_input.rs
examples/vello/: Cargo.toml
examples/vello/src/: main.rs
examples/wav/: main.rs  wav_obj.rs
examples/wavy/: main.rs  wavy.wgsl
iced/: Cargo.toml
iced/examples/: main.rs
iced/examples/ui/: mod.rs
iced/src/: clipboard.rs  gui.rs  lib.rs
shaders/: arc.wgsl  arc_cp.wgsl  arc_in.wgsl  arc_skew.wgsl  arc_vin.wgsl  circle_flat.frag  color_flat.frag  ellipse.wgsl  ellipse_skew.wgsl  flat_texture.wgsl  main.frag  main.vert  pass_plain.vert  pass_texC.vert  pass_texcoord.vert  proj_2d_vNorm_passCol.vert  proj_texC.vert  projection_texture.wgsl  standard_instance_texture.wgsl  standard_texture.wgsl  texture_flat.frag  util.wgsl  wavy.wgsl
src/: assoc.rs  buffer_extension.rs  buffer_helper.rs  byte_slice.rs  color.rs  encoder_extension.rs  error.rs  flex_refs.rs  frames.rs  glyph_extension.rs  gx.rs  gx_helpers.rs  iced.rs  lib.rs  macros.rs  math.rs  option_result_helper.rs  pipeline_config.rs  projection.rs  read_bytes.rs  refs.rs  render_extension.rs  render_target.rs  staging_extension.rs  text_input.rs  texture_extension.rs  ticks.rs  timer.rs  util_extension.rs  vec4.rs  vec_buffer.rs  vertex_buffer.rs  wav_obj.rs  wgpu_extensions.rs  wgx.rs
vello/: Cargo.toml
wgsl_modules/: Cargo.toml
wgsl_modules/loader/: Cargo.toml
wgsl_modules/loader/src/: lib.rs
wgsl_modules/macro/: Cargo.toml
wgsl_modules/macro/src/: lib.rs
wgsl_modules/shaders/: circular.wgsl  concatenated.wgsl  fragment.wgsl  nonexistent.wgsl  shader_all.wgsl  util.wgsl
wgsl_modules/src/: lib.rs
wgsl_modules/tests/: default.rs
wgsl_modules/tests/inner/: mod.rs
wgsl_modules/tests/shaders/: circular.wgsl  concatenated.wgsl  fragment.wgsl  invalid.wgsl  nonexistent.wgsl  shader_all.wgsl  util.wgsl
