[workspace.package]
version = "0.22.5"
authors = ["Stefan Tammer <st.tammer@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace]
members = ["wgsl_modules", "wgsl_modules/loader", "wgsl_modules/macro"]

[workspace.dependencies]
wgsl_modules = { version = "~0.22.5", path = "wgsl_modules" }
wgsl_modules_macro = { version = "~0.22.5", path = "wgsl_modules/macro" }
wgsl_modules_loader = { version = "~0.22.5", path = "wgsl_modules/loader" }
naga = { version = "22", features = ["wgsl-in"] }
platform = { version = "1.1.0", tag = "v1.1.0", git = "https://github.com/StT191/platform" }
wgx = { path = ".", default-features = false }
log = "0"
anyhow = "1"


[package]
name = "wgx"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgx"


[features]
default = ["math", "wgsl_modules"]
math = ["dep:glam"]
serde = ["dep:serde", "glam/serde"]
wgsl_modules = ["dep:wgsl_modules"]
wgsl_modules_loader = ["wgsl_modules", "wgsl_modules/loader"]


[dependencies]
wgpu = { version = "22", default-features = false, features = ["wgsl"] }
wgpu-types = "22"
log = { workspace = true }
anyhow = { workspace = true }
arrayvec = "0.7"

glam = { version = ">=0.29", optional = true }
serde = { version = "1.0", optional = true }
wgsl_modules = { workspace = true, optional = true }


[dev-dependencies]
platform = { workspace = true, features = ["frame_timer"] }
image = { version = "0.25", default-features = false, features = ["png"] }
wgpu = { version = "22", default-features = false, features = ["webgpu", "webgl"] }
serde_json = "1.0"