[workspace.package]
version = "27.0.0"
authors = ["Stefan Tammer <st.tammer@gmail.com>"]
edition = "2024"
license = "MIT"

[workspace]
members = ["wgsl_modules", "wgsl_modules/loader", "wgsl_modules/macro"]

[workspace.dependencies]
wgpu = { version = "27", default-features = false }
naga = { version = "27", default-features = false }
anyhow = "1"


[package]
name = "wgx"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgx"


[features]
default = ["math", "wgsl_modules"]
math = ["dep:glam"]
mint = ["dep:mint", "glam?/mint"]
serde = ["dep:serde", "glam?/serde", "mint?/serde"]
wgsl_modules = ["dep:wgsl_modules"]
wgsl_modules_loader = ["wgsl_modules", "wgsl_modules/loader", "wgpu/naga-ir"]


[dependencies]
wgpu = { workspace = true, features = ["std", "wgsl", "parking_lot"] }
anyhow = { workspace = true }
log = "0"
arrayvec = { version = "0.7", default-features = false }

glam = { version = "0.30", optional = true }
mint = { version = "0.5", optional = true }
serde = { version = "1.0", default-features = false, optional = true }
wgsl_modules = { path = "wgsl_modules", optional = true }


[dev-dependencies]
platform = { version = "~1.5", tag = "v1.5", git = "https://github.com/StT191/platform" }
wgpu = { workspace = true, features = ["vulkan", "webgpu", "webgl"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0"