[package]
name = "wgx-iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgx_iced"


[dependencies]
platform = { tag = "v1.4-winit-iced", git = "https://github.com/StT191/platform", features = ["web_clipboard"] }
wgx = { workspace = true }

# iced_winit = { version = "0.14-dev" }
iced_winit = { rev = "efae386", git = "https://github.com/iced-rs/iced" }
# iced_wgpu = { version = "0.14-dev" }
iced_wgpu = { rev = "efae386", git = "https://github.com/iced-rs/iced" }


[dev-dependencies]
platform = { tag = "v1.4-winit-iced", git = "https://github.com/StT191/platform", features = ["frame_pacing", "timeout", "auto_wake_lock"]}
wgpu = { workspace = true, default-features = false, features = ["vulkan", "webgpu", "webgl"] }

# iced_widget = { version = "0.14-dev", features = ["canvas", "wgpu"] }
iced_widget = { rev = "efae386", git = "https://github.com/iced-rs/iced", features = ["canvas", "wgpu"] }
# iced_wgpu = { version = "0.14-dev", features = ["geometry"] }
iced_wgpu = { rev = "efae386", git = "https://github.com/iced-rs/iced", features = ["geometry"] }