[package]
name = "wgx-vello-example"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
platform = { workspace = true }
wgpu = { workspace = true, default-features = false, features = ["vulkan", "webgpu", "webgl"] }
wgx = { workspace = true }

# vello = "0.5"
vello = { rev = "2e96026", git = "https://github.com/linebender/vello" }