[package]
name = "wgsl_modules"
version = "0.1.0"
authors = ["Stefan Tammer <st.tammer@gmail.com>"]
edition = "2021"

[lib]
name = "wgsl_modules"

[features]
loader = ["dep:wgsl_modules_loader"]

[dependencies]
wgsl_modules_macro = { path = "macro" }
wgsl_modules_loader = { path = "loader", optional = true }
