[package]
name = "wgsl_modules"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgsl_modules"

[features]
loader = ["dep:wgsl_modules_loader"]

[dependencies]
wgsl_modules_macro = { workspace = true }
wgsl_modules_loader = { workspace = true, optional = true }
