[package]
name = "wgx-vello-example"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
platform = { workspace = true }
wgx = { workspace = true }

vello = "0.5"


[target.'cfg(target_family = "wasm")'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["webgpu", "webgl"] }