[package]
name = "wgsl_modules_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgsl_modules_loader"

[dependencies]
lazy_static = "1"
regex-lite = { version = "0.1" }
naga = { version = "0.14", features = ["wgsl-in", "span", "validate"] }