[package]
name = "wgsl_modules_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgsl_modules_loader"

[dependencies]
regex = { version = "1.0" }
naga = { workspace = true }
hashbrown = { version = "0.15", default-features = false }
anyhow = { workspace = true }