[package]
name = "wgsl_modules_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgsl_modules_loader"

[dependencies]
regex = { version = "1.0", default-features = false, features = ["std", "perf", "unicode-perl"] }
memchr = { version = "2", default-features = true }
naga = { workspace = true, features = ["wgsl-in"] }
hashbrown = { version = "0.15", default-features = false }
anyhow = { workspace = true }