[package]
name = "wgsl_modules_macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "wgsl_modules_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
anyhow = { workspace = true }
wgsl_modules_loader = { workspace = true }